--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
         <img src="" alt="">
         <h2>Informações</h2>
     </div>
+
+    <div id="rodapé">
+        <h3>2024. Direitos reservados.</h3>
+    </div>
 </body>
 </html>
